# fswatch

./: .gitignore  README.md  pyproject.toml
configs/: example1.json  example2.json  example_alert.json
example/: audit_example.cc  inotify_example.cc  sysaudit_example.py
macros/: macros.py
scripts/: breadth_test.sh  concurrent_test.py  depth_test.sh  test1.sh  test2.sh  test3.sh  test_deep_dir.sh
src/: buffer.py  controller.py  dispatcher.py  event.py  linux.py  loguru.py  macros.py  macros.py.bkp  monitor.py  observer.py  scheduler.py  settings.py  subscriber.py  tracker.py  utils.py
src/database/: conn.py  indexer.py  pymysqlpool.py  schema.sql
